infra/k8s/app.deployment.yml
# apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nodeapp
  labels:
    app: nodeapp
    # type: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
      # type: pod
  template:
    metadata:
      labels:
        app: nodeapp
        # type: pod
    spec:
      containers:
      - image: crfluiz/challenge-delta:latest
        name: node-app
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: webinterface
        # resources:
        #   requests:
        #     memory: "300Mi"
        #     cpu: "500m"
        #   limits:
        #     memory: "500Mi"
        #     cpu: "1000m"
