infra/k8s/nginx.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  labels:
    app: nginx
    # type: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      # type: pod
  template:
    metadata:
      labels:
        app: nginx
        # type: pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        command: ["nginx", "-g", "daemon off;"]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf

      volumes:
      - name: nginx-conf
        configMap:
          name: configmap-nginx
          items:
            - key: nginx.conf
              path: nginx.conf
