infra/k8s/app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeapp
  labels:
    service: nodeapp
    # app: nodeapp
    # type: service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: webinterface
      # targetPort: 3000
      # nodePort: 30030
      # protocol: TCP
  selector:
    app: nodeapp
