infra/k8s/nginx.service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    service: nginx
    # app: nginx
    # type: service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx
    # type: deployment
