infra/k8s/app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nodeapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nodeapp
                port:
                  number: 3000
  defaultBackend:
    service:
      name: service-nodeapp
      port:
        number: 3000
